--- a/Source/UnitTestMVCApp/UnitTestMVCApp/Views/Home/Index.cshtml
+++ b/Source/UnitTestMVCApp/UnitTestMVCApp/Views/Home/Index.cshtml
@@ -3,12 +3,16 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Unit Testing Rocks!</h1>
+    <p class="lead">Get that warm fuzzy feeling when it's time to deploy</p>
+    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more Today! &raquo;</a></p>
 </div>
 
 <div class="row">
+
+    <h2>Sign Up Today</h2>
+   
+    <!-- 
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
@@ -28,4 +32,6 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
+    !-->
+
 </div>
